# kando

./: .clang-format  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.js  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  REUSE.toml  SECURITY.md  binding.gyp  eslint.config.mjs  forge.config.js  forge.config.ts  i18next-parser.config.ts  i18next.config.ts  index.html  macros_data_1_file.cleaned.json  macros_data_1_file.json  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  renderer.js  settings_data_1_file.json  styles.css  tsconfig.json  webpack.ignores.ts  webpack.main.config.js  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.js  webpack.renderer.config.ts  webpack.rules.js  webpack.rules.ts
.changeset/: README.md  config.json
.github/: FUNDING.yml  dependabot.yml  osx_certificates.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: checks.yml  deploy.yml  deploy_to_winget.yml  pull_request.yml  push.yml  test_deploy.yml
.reuse/: dep5
LICENSES/: LicenseRef-Pixabay.txt
apps/kando/: forge.config.ts  i18next-parser.config.ts  package-lock.json  package.json  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.ts  webpack.rules.ts
apps/kando/src/main/backends/linux/wlroots/native/: CMakeLists.txt  Native.cpp  index.ts
apps/kando/src/main/backends/linux/x11/native/: CMakeLists.txt  index.ts
apps/kando/src/main/backends/windows/native/: CMakeLists.txt  Native.cpp  stb_image_write.h
appstream/: REUSE.toml  menu.kando.Kando.desktop  menu.kando.Kando.metainfo.xml
assets/fonts/: Cantarell-Regular.ttf.license  NotoSans-VariableFont_wdth,wght.ttf.license
assets/icons/: REUSE.toml  icon.icns
assets/images/: REUSE.toml
assets/installer/: REUSE.toml
assets/videos/: REUSE.toml
docs/: README.md  changelog.md  code-of-conduct.md  config-files.md  configuring.md  contributing.md  getting-started.md  installing.md  kando-plugin-system-spec.md  menu-themes.md  usage.md
docs/img/: REUSE.toml  logo-big.png.license
kando-svelte/: .gitignore  README.md  eslint.config.js  menus-orig.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
kando-svelte-demo/: README.md  package-lock.json  package.json
kando-svelte/notes/: aquery.md  button-trigger-support.md  dom-css-compatibility.md  don-notes.txt  jquery-pie-menus.md  kando-svelte.md  kando-web-component.md
kando-svelte/src/: app.html
locales/ar/: translation.json
locales/cs/: translation.json
locales/da/: translation.json
locales/de/: translation.json
locales/el/: translation.json
locales/en/: translation.json
locales/es/: translation.json
locales/fa/: translation.json
locales/fi/: translation.json
locales/fr/: translation.json
locales/hi/: translation.json
locales/ia/: translation.json
locales/it/: translation.json
locales/ja/: translation.json
locales/kab/: translation.json
locales/ko/: translation.json
locales/lt/: translation.json
locales/nb-NO/: translation.json
locales/nl/: translation.json
locales/pl/: translation.json
locales/pt/: translation.json
locales/pt-BR/: translation.json
locales/ru/: translation.json
locales/sr/: translation.json
locales/ta/: translation.json
locales/tr/: translation.json
locales/uk/: translation.json
locales/vi/: translation.json
locales/zh-Hans/: translation.json
locales/zh-Hant/: translation.json
notes/: don-notes.txt  inventory.md  kando-svelte.md  svelte.md
patches/: cmake-js+7.3.0.patch
plugins/: README.md
plugins/hello-world/: index.html  kando-plugin.json
scripts/: i18n.ts
src/: app.js  app.ts  bootstrap.scss  common.ts  index.html  index.scss  index.ts  main.js  main.ts  preload.js  preload.ts  renderer.d.ts  renderer.js  renderer.ts
src/@types/: global.d.ts
src/backend/: backend.ts  gnome.js  index.js  index.ts  win32.js  x11.js
src/backends/: backend.ts  index.ts
src/backends/linux/kde/wayland/native/: CMakeLists.txt  main.cpp  move_pointer.cpp  move_pointer.hpp
src/backends/linux/kde/wayland/native/protocols/: fake-input.xml
src/common/: achievement-tracker.ts  action-registry.ts  action-type-registry.ts  common-window-api.ts  general-settings.ts  icon-theme-registry.ts  index.d.ts  index.ts  item-action-registry.ts  item-config-registry.ts  item-factory.ts  item-type-registry.ts  key-codes.ts  key-mapper.ts  menu-settings.ts  menu-theme-description.ts  node-action-registry.ts  node-type-registry.ts  plugin-manifest.ts  sound-theme-description.ts  typed-event-emitter.ts
src/editor/: editor.scss  editor.ts  index.html  index.scss  index.ts  main.ts  preload.ts
src/main/: app.ts  index.ts  main.ts  menu-window.ts  menuWindow.ts  notification.ts  pointer-motion.ts  settings-window.ts  settings.ts  settingsWindow.ts  update-checker.ts  workflow-executor.ts
src/main/backends/linux/wlroots/native/: CMakeLists.txt  Native.cpp  Native.hpp  NativeWLR.cpp  NativeWLR.hpp  active_window.cpp  index.ts  main.cpp  move_pointer.cpp  simulate_key.cpp
src/main/backends/linux/wlroots/native/protocols/: virtual-keyboard-unstable-v1.xml  wlr-foreign-toplevel-management-unstable-v1.xml  wlr-layer-shell-unstable-v1.xml  wlr-virtual-pointer-unstable-v1.xml  xdg-output-unstable-v1.xml  xdg-shell.xml
src/main/backends/macos/native/: CMakeLists.txt  Native.cpp  Native.hpp  Native.mm  index.ts
src/menu/: gesture-detection.ts  index.html  index.scss  index.ts  main.ts  math.js  math.ts  menu-theme.ts  menu.js  (+6 more)
src/menu-renderer/: center-text.ts  index.html  index.scss  index.ts  menu-theme.ts  menu-window-api.ts  menu.ts  rendered-menu-item.ts  selection-wedges.ts  settings-button.ts  sound-theme.ts  wedge-separators.ts
test/: ipc-auth.spec.ts  ipc-observer.spec.ts  ipc-show-menu.spec.ts  math.spec.ts  pointer-motion.spec.ts  settings.spec.ts
tools/: flatten-translations.js  kando.desktop  make-app-image.sh  remove-key-from-translations.js  sort-translation-keys.js  unflatten-translations.js  update-code-snippets.sh
(+891 files in other folders)
